roles/servers/files/10.32.10.90/iptables
# Generated by iptables-save v1.4.7 on Fri Jan  2 10:56:14 2015
*filter
:INPUT ACCEPT [2:267]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 10.32.0.0/16 -p tcp -m tcp --dport 22 -j ACCEPT 

##allow connection to jetty adapter from client
-A INPUT -p tcp -m tcp --dport 8383 -j ACCEPT

# allow monit from ops VLAN
-A INPUT -s 10.32.5.0/24 -p tcp -m tcp --dport 2812 -j ACCEPT

#allow connection to API Bridge
-A INPUT -s 10.32.0.0/16 -p tcp -m tcp --dport 8180 -j ACCEPT 
#allow connection to Jetty reporter
-A INPUT -s 10.32.0.0/16 -p tcp -m tcp --dport 8280 -j ACCEPT 
#allow connection to Jetty adapter
#-A INPUT -s 10.32.0.0/16 -p tcp -m tcp --dport 8383 -j ACCEPT 
#allow snmp connection
-A INPUT -s 10.32.0.0/16 -p udp -m udp --dport 161 -j ACCEPT
##allow 8080 connection
-A INPUT -s 10.32.0.0/16 -p tcp -m tcp --dport 8080 -j ACCEPT 
#dont log broadcast
-A INPUT -m pkttype --pkt-type broadcast -s 0.0.0.0/32 -d 255.255.255.255/32 -j ACCEPT
#dont log multicast
-A INPUT -s 0.0.0.0/32 -d 224.0.0.1/32 -m pkttype --pkt-type multicast -j ACCEPT 
#log the rest
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "Incoming Logged: " --log-level 5



-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 

# output to alto report
-A OUTPUT -d 202.149.86.136 -p tcp -m tcp --dport 8081 -j ACCEPT
# output test kita finance
-A OUTPUT -d 202.137.2.157 -p tcp -m tcp --dport 8080 -j ACCEPT
# output to wom
-A OUTPUT -d 110.35.81.215 -p tcp -m tcp --dport 8081 -j ACCEPT

#allow connection to active mq server
-A OUTPUT -d 10.32.10.205/32 -j ACCEPT 
#allow connection to database server
-A OUTPUT -d 10.32.10.7/32 -p tcp -m tcp --dport 3306 -j ACCEPT 
#log the rest
-A OUTPUT -m limit --limit 5/min -j LOG --log-prefix "Outgoing Logged: " --log-level 5

COMMIT
# Completed on Fri Jan  2 10:56:14 2015
